<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_tf_tree</name>
  <version>0.0.1</version>
  <description>build tf tree</description>
  <maintainer email="1940275781@qq.com">yc-dlan</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
 
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz2</depend>
  <depend>robot_state_publisher</depend>
  <depend>sensor_msgs</depend>
  <depend>camera_info_manager</depend>
  <depend>depth_image_to_pointcloud2</depend>
  <depend>gazebo_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
